--- a/src/ui/lifeboat/lifeboat.ui
+++ b/src/ui/lifeboat/lifeboat.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Lifeboat</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
